# rustorithm

./: Cargo.toml  README.md
exercises/linear-search/: Cargo.toml  README.md
exercises/linear-search/src/: main.rs
solutions/linear-search/: Cargo.toml
