[workspace]
resolver = "2"
members = [
"aho-corasick", 
"arraylist",
"avl-tree",
"b-tree",
"bellman-ford",
"bfs-unweighted",
"binary-heap",
"binary-search",
"binary-search-tree",
"boyer-moore",
"breadth-first-search",
"bubble-sort",
"depth-first-search",
"dijkstra",
"doubly-linked-list",
"edit-distance",
"floyd-warshall",
"hash-table",
"insertion-sort",
"kruskal",
"kunth-morris-pratt",
"linear-search",
"longest-common-sequence",
"prim",
"quadratic-search",
"rabin-karp",
"red-black-tree",
"selection-sort",
"splay-tree",
"strongly-connected-components",
"topological-sort",
"trie",
"vector"
]
